@@ -1,4 +1,4 @@
 {
-    label: 'Europe (EU27)',
-    data: [[1999, 3.0], [2000, 3.9]]
+    "label": "Europe (EU27)",
+    "data": [[1999, 3.0], [2000, 3.9]]
 }
